// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input render renders correctly with correct as false 1`] = `
<WithStyles(Component)
  correct={false}
  disabled={false}
  hasMaxWidth={true}
  isBox={true}
  onChange={[Function]}
  value="Cow"
  variant="outlined"
/>
`;

exports[`Input render renders correctly with default props 1`] = `
<WithStyles(Component)
  correct={false}
  disabled={false}
  hasMaxWidth={true}
  isBox={true}
  onChange={[Function]}
  value="Cow"
  variant="outlined"
/>
`;

exports[`Input render renders correctly with disabled prop as true 1`] = `
<WithStyles(Component)
  correct={false}
  disabled={true}
  hasMaxWidth={true}
  isBox={true}
  onChange={[Function]}
  value="Cow"
  variant="outlined"
/>
`;
